--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ steps:
   inputs:
     Test1: 'C:\Scenarios-Multiple'
     displayController: '1'
+  condition: always()
 
 
 # Some parameters are set (on a single scenario folder) -> you can set others to default values too if you want
@@ -24,7 +25,7 @@ steps:
     PerScenarioTimeOut: '5'
     #resultsFilename: 'ReportsLogs.xml'
     #fsReportPath: 'C:\LoadRunnerTestsResults'
-
+  condition: always()
 
 # All params are set (on a multiple scenarios folder) -> fsTimeout test
 - task: ExecMicroFocusTests@0
@@ -38,12 +39,13 @@ steps:
     displayController: '1'
     fsTimeout: '10'
     resultsFilename: 'logs.xml'
-    
+  condition: always()
+
 # Source folder with no scenarios
 - task: ExecMicroFocusTests@0
   inputs:
     Test1: 'C:\Scenarios-None'
-
+  condition: always()
 
 # # Test1 parameter should be set in order to work
 # # - task: ExecMicroFocusTests@0
