Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ steps:
   inputs:
     Test1: 'C:\Scenarios-Multiple'
     displayController: '1'
+    threatFailureAsError: false
   condition: always()
 
 
