Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,25 @@ steps:
 - task: ExecMicroFocusTests@0
   inputs:
     Test1: 'C:\Scenarios-Multiple'
+
+# - task: PublishTestResults@2
+#   inputs:
+#     #testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
+#     #testResultsFiles: '**/TEST-*.xml' 
+#     #searchFolder: '$(System.DefaultWorkingDirectory)' # Optional
+#     #mergeTestResults: false # Optional
+#     #failTaskOnFailedTests: false # Optional
+#     #testRunTitle: # Optional
+#     #buildPlatform: # Optional
+#     #buildConfiguration: # Optional
+#     publishRunAttachments: true
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: 'publish'
+#     publishWebProjects: true
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
