--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,13 +14,19 @@ steps:
 # Both of them should pass
 # - task: ExecMicroFocusTests@0
 #   inputs:
-#     Test1: 'C:\Scenarios-Multiple'
+#     Test1: 'C:\Scenarios-Multiple\'
 
 
 - powershell:  
     copy-item -Path C:\IE -Destination .\IE -Recurse
 
-- task: PublishTestResults@2
+- task: PublishBuildArtifacts@1
   inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '**/*.html'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+- task: publishHtml@1
+  inputs:
+    artifactName: 'drop'
+    htmlFilePath: '.\IE\HTML.html'
