--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,4 +29,4 @@ steps:
 - task: publishHtml@1
   inputs:
     artifactName: 'drop'
-    htmlFilePath: '.\IE\HTML.html'
+    htmlFilePath: 'C:\Agent\_work\3\a\IE\HTML.html'
