--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 
 - task: ExecMicroFocusTests@0
   inputs:
-    SourcePath: 'C:\Scenarios-Multiple\'
+    SourcePath: 'C:\Scenarios-Multiple'
     BuildId: '$(Build.BuildNumber)'
     BuildArtifactsDirectory: '$(Build.ArtifactStagingDirectory)'
 
