--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,17 +43,17 @@ steps:
 #     testResultsFormat: 'JUnit'
 #     testResultsFiles: '$(Build.ArtifactStagingDirectory)\IE\*.xml'
 
-- task: SendEmail@1
-  inputs:
-    To: 'paul-adrian.tofan@microfocus.com'
-    From: 'tofanadrian3000@yahoo.ro'
-    Subject: 'Ice Ice Baby'
-    Body: |
-      Yo, VIP, let's kick it!
-      Ice ice baby
-      Ice ice baby
-      All right stop
-      Collaborate and listen ...
-    BodyAsHtml: false
-    AddAttachment: true
-    Attachment: '$(Build.ArtifactStagingDirectory)\MFTestsArtifacts'
+# - task: SendEmail@1
+#   inputs:
+#     To: 'paul-adrian.tofan@microfocus.com'
+#     From: 'tofanadrian3000@yahoo.ro'
+#     Subject: 'Ice Ice Baby'
+#     Body: |
+#       Yo, VIP, let's kick it!
+#       Ice ice baby
+#       Ice ice baby
+#       All right stop
+#       Collaborate and listen ...
+#     BodyAsHtml: false
+#     AddAttachment: true
+#     Attachment: '$(Build.ArtifactStagingDirectory)\MFTestsArtifacts'
