--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 
 - task: ExecMicroFocusTests@0
   inputs:
-    SourcePath: 'C:\Scenarios-None'
+    SourcePath: 'C:\Scenarios-Multiple2\2UsersPassedScenario.lrs'
     ResultsDirectory: 'C:\LR'
     BuildId: 'Build-$(Build.BuildNumber)'
     BuildArtifactsDirectory: '$(Build.ArtifactStagingDirectory)'
