--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,11 @@ steps:
     # BuildArtifactsDirectory: '$(Build.ArtifactStagingDirectory)'
 
 
-# - task: ExecMicroFocusTestsDemo6@0
-#   inputs:
-#     SourcePath: 'C:\Scenarios-Multiple'
-#     ResultsDirectory: 'C:\LR'
-#     BuildLabel: 'Build-$(Build.BuildNumber)'
+- task: ExecMicroFocusTestsDemo6@0
+  inputs:
+    SourcePath: 'C:\Scenarios-Multiple'
+    ResultsDirectory: 'C:\LR'
+    BuildLabel: 'Build-$(Build.BuildNumber)'
 
 # - powershell:  
 #     copy-item -Path C:\IE -Destination $(Build.ArtifactStagingDirectory) -Recurse
@@ -39,11 +39,11 @@ steps:
 #     ArtifactName: 'MFTestsArtifacts'
 #     publishLocation: 'Container'
 
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: 'C:\Agent\_work\3\a\LoadRunnerReports\*.xml'
-    mergeTestResults: true
+# - task: PublishTestResults@2
+#   inputs:
+#     testResultsFormat: 'JUnit'
+#     testResultsFiles: 'C:\Agent\_work\3\a\LoadRunnerReports\*.xml'
+#     mergeTestResults: true
 
 # - task: SendEmail@1
 #   inputs:
