--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
     
 - task: ExecMicroFocusTestsDemo6@0
   inputs:
-    SourcePath: 'C:\Scenarios-Multiple2'
+    SourcePath: 'C:\Scenarios-Multiple2\2UsersPassedScenario.lrs'
     ResultsDirectory: 'C:\LR'
     #BuildLabel: 'Build-$(Build.BuildNumber)'
 
