--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool: 'AzureVms'
 
 steps:
 
-- task: ExecMicroFocusTestsDemo8@0
+- task: ExecuteLoadRunnerTests@0
   inputs:
     SourcePath: 'C:\Scenarios-Multiple2'
     PublishScenarioResults: false
@@ -20,7 +20,7 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)\LoadRunnerArtifacts'
-    ArtifactName: 'drop'
+    ArtifactName: 'LRArtifacts'
     publishLocation: 'Container'
 
 - task: PublishTestResults@2
@@ -28,3 +28,6 @@ steps:
     testResultsFormat: 'JUnit'
     testResultsFiles: '*.xml'
     searchFolder: '$(Build.ArtifactStagingDirectory)\LoadRunnerReports'
+    mergeTestResults: true
+
+
