--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,9 +3,9 @@ trigger:
 - master
 
 #pool: 'Win8.1'
-#pool: 'Default'
+pool: 'Default'
 #pool: 'Win2016'
-pool: 'AzureVms'
+#pool: 'AzureVms'
 
 steps:
 
