--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,8 @@
 trigger:
 - master
 
-pool: 'Win8.1'
-#pool: 'Default'
+# pool: 'Win8.1' # Everything worked as expected
+pool: 'Default'
 #pool: 'Win2016'
 #pool: 'AzureVms'
 
@@ -46,4 +46,9 @@ steps:
 - task: ExecuteLoadRunnerTestsRelease@1
   inputs:
     SourcePath: 'C:\Test Path'
+  condition: always()
+
+- task: ExecuteLoadRunnerTestsRelease@1
+  inputs:
+    SourcePath: 'C:\Scenarios-Multiple2\2UsersPassedScenario.lrs'
   condition: always()
