--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,8 @@ trigger:
 - master
 
 # pool: 'Win8.1' # Everything worked as expected
-pool: 'Default'
-#pool: 'Win2016'
+# pool: 'Default' # Everything worked as expected
+pool: 'Win2016'
 #pool: 'AzureVms'
 
 steps:
